--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         .burger-button {
             width: 100px;
             height: 100px;
-            background-image: url('burger-icon.png'); /* замініть на шлях до вашого зображення */
+            background-image: url('https://imgur.com/a/Sp8tEbT'); 
             background-size: cover;
             border: none;
             border-radius: 50%;
