--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
             height: 100vh;
             margin: 0;
             background-color: black;
@@ -18,20 +18,23 @@
         }
         .nickname {
             font-size: 24px;
-            margin-bottom: 20px;
+            margin-top: 20px;
+            text-align: center;
         }
         .counter {
             font-size: 48px;
-            margin-bottom: 20px;
+            margin-top: 10px;
+            text-align: center;
         }
         .burger-button {
-            width: 100px;
-            height: 100px;
-            background-image: url('https://imgur.com/a/Sp8tEbT'); 
+            width: 150px;
+            height: 150px;
+            background-image: url('https://imgur.com/a/Sp8tEbT');
             background-size: cover;
             border: none;
             border-radius: 50%;
             cursor: pointer;
+            margin-top: 20px;
         }
     </style>
 </head>
