--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             text-align: center;
         }
         .burger-button {
-            width: 150px;
-            height: 150px;
-            background-image: url('https://imgur.com/a/Sp8tEbT');
+            width: 250px;
+            height: 250px;
+            background-image: url('https://imgur.com/VtVDfFc');
             background-size: cover;
             border: none;
             border-radius: 50%;
