--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         .burger-button {
             width: 200px;
             height: 200px;
-            background-image: url('https://imgur.com/VtVDfFc'); /* Замініть на URL вашого зображення */
+            background-image: url('https://i.imgur.com/VtVDfFc.png
+'); /* Замініть на URL вашого зображення */
             background-size: cover;
             border: none;
             border-radius: 50%;
