--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-size: 20px;
             margin-bottom: 10px;
             text-align: center;
-            color: #FFD700; /* Золотистий колір */
+            color: #FFD700; /* Золотистий колір для імені */
         }
         .counter {
             font-size: 60px;
@@ -32,8 +32,7 @@
         .burger-button {
             width: 200px;
             height: 200px;
-            background-image: url('https://i.imgur.com/VtVDfFc.png
-'); /* Замініть на URL вашого зображення */
+            background-image: url('https://i.imgur.com/VtVDfFc.png'); /* Прямий URL вашого зображення */
             background-size: cover;
             border: none;
             border-radius: 50%;
