--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Telegram Mini App</title>
     <style>
+        /* Загальний стиль */
         body {
             display: flex;
             flex-direction: column;
@@ -26,12 +27,31 @@
             left: 50%;
             transform: translateX(-50%);
         }
-        .counter, .nft-container {
+        .nav-buttons {
+            position: absolute;
+            bottom: 10px;
+            display: flex;
+            gap: 20px;
+        }
+        .nav-button {
+            padding: 10px 20px;
+            font-size: 18px;
+            color: white;
+            background-color: #333;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        /* Clicker */
+        .clicker-screen {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+        }
+        .counter {
             font-size: 60px;
             font-weight: bold;
-            text-align: center;
-            color: white;
-            display: none; /* Сховаємо елементи спочатку */
+            margin-bottom: 20px;
         }
         .burger-button {
             width: 250px;
@@ -41,138 +61,127 @@
             border: none;
             border-radius: 50%;
             cursor: pointer;
-            outline: none;
-            display: none;
-            -webkit-tap-highlight-color: transparent;
             transition: transform 0.1s ease;
         }
         .burger-button:active {
             transform: scale(1.1);
         }
-        .menu-toggle {
-            position: absolute;
-            bottom: 20px;
-            display: flex;
-            gap: 20px;
+        /* NFT */
+        .nft-screen {
+            display: none;
+            flex-direction: column;
+            align-items: center;
         }
-        .menu-button {
-            font-size: 20px;
-            padding: 10px 20px;
-            color: white;
-            background-color: #333;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
+        .nft-title {
+            font-size: 50px;
+            margin-bottom: 20px;
         }
-        .nft-container img {
+        .nft-image {
             width: 200px;
             height: 200px;
+            background-image: url('https://i.imgur.com/VtVDfFc.png');
+            background-size: cover;
             border-radius: 50%;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         .nft-price {
-            font-size: 30px;
-            color: white;
-            margin-bottom: 20px;
+            font-size: 40px;
+            margin-bottom: 10px;
         }
         .buy-sell-button {
-            font-size: 20px;
             padding: 10px 20px;
+            font-size: 18px;
             color: black;
-            background-color: yellow;
+            background-color: #00FF00;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="nickname" id="nickname">My nick</div>
-
-    <!-- Counter Clicker Menu -->
-    <div id="clicker-menu">
+    <!-- Екран Clicker -->
+    <div class="clicker-screen" id="clickerScreen">
         <div class="counter" id="counter">0</div>
-        <button class="burger-button" onclick="incrementCounter()">+</button>
+        <button class="burger-button" onclick="incrementCounter()"></button>
     </div>
-
-    <!-- NFT Menu -->
-    <div id="nft-menu" class="nft-container">
-        <h1>NFT</h1>
-        <img src="https://i.imgur.com/VtVDfFc.png" alt="NFT Image">
-        <div class="nft-price" id="nft-price">1000</div>
-        <button class="buy-sell-button" id="buy-sell-button" onclick="toggleBuySell()">BUY</button>
+    <!-- Екран NFT -->
+    <div class="nft-screen" id="nftScreen">
+        <div class="nft-title">NFT</div>
+        <div class="nft-image"></div>
+        <div class="nft-price" id="nftPrice">1000</div>
+        <button class="buy-sell-button" id="buySellButton" onclick="buyOrSellNFT()">BUY</button>
     </div>
-
-    <!-- Menu Toggle Buttons -->
-    <div class="menu-toggle">
-        <button class="menu-button" onclick="showClickerMenu()">Clicker</button>
-        <button class="menu-button" onclick="showNFTMenu()">NFT</button>
+    <!-- Кнопки навігації -->
+    <div class="nav-buttons">
+        <button class="nav-button" onclick="showScreen('clicker')">Clicker</button>
+        <button class="nav-button" onclick="showScreen('nft')">NFT</button>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         let count = localStorage.getItem('counter') ? parseInt(localStorage.getItem('counter')) : 0;
-        let balance = localStorage.getItem('balance') ? parseInt(localStorage.getItem('balance')) : 10000; // Початковий баланс
+        let balance = localStorage.getItem('balance') ? parseInt(localStorage.getItem('balance')) : 0;
         let nftPrice = 1000;
-        let hasNFT = false;
+        let ownsNFT = false;
 
+        // Функція оновлення інтерфейсу балансу
         function updateCounterDisplay() {
             document.getElementById('counter').innerText = count;
         }
 
         function incrementCounter() {
             count += 1;
+            balance += 1;
             updateCounterDisplay();
             localStorage.setItem('counter', count);
-        }
-
-        // Перемикаємося на Clicker меню
-        function showClickerMenu() {
-            document.getElementById('clicker-menu').style.display = 'block';
-            document.getElementById('nft-menu').style.display = 'none';
-        }
-
-        // Перемикаємося на NFT меню
-        function showNFTMenu() {
-            document.getElementById('clicker-menu').style.display = 'none';
-            document.getElementById('nft-menu').style.display = 'block';
-        }
-
-        // Функція для покупки/продажу NFT
-        function toggleBuySell() {
-            if (hasNFT) {
-                balance += nftPrice;
-                hasNFT = false;
-                document.getElementById('buy-sell-button').innerText = "BUY";
-            } else {
-                if (balance >= nftPrice) {
-                    balance -= nftPrice;
-                    hasNFT = true;
-                    document.getElementById('buy-sell-button').innerText = "SELL";
-                } else {
-                    alert("Not enough balance");
-                }
-            }
             localStorage.setItem('balance', balance);
         }
 
-        // Динамічна зміна ціни NFT
-        setInterval(() => {
-            nftPrice += Math.floor(Math.random() * 20 - 10); // Рандомна зміна ціни
-            document.getElementById('nft-price').innerText = nftPrice;
-        }, 1000);
+        // Функції для перемикання екранів
+        function showScreen(screen) {
+            document.getElementById('clickerScreen').style.display = (screen === 'clicker') ? 'flex' : 'none';
+            document.getElementById('nftScreen').style.display = (screen === 'nft') ? 'flex' : 'none';
+        }
 
+        // Функція для динамічної зміни ціни NFT
+        function updateNFTPrice() {
+            const change = Math.floor(Math.random() * 101) - 50; // Випадкове число від -50 до +50
+            nftPrice = Math.max(500, nftPrice + change); // Мінімум 500
+            document.getElementById('nftPrice').innerText = nftPrice;
+        }
+
+        // Функція купівлі/продажу NFT
+        function buyOrSellNFT() {
+            if (!ownsNFT) { // Купівля
+                if (balance >= nftPrice) {
+                    balance -= nftPrice;
+                    ownsNFT = true;
+                    document.getElementById('buySellButton').innerText = 'SELL';
+                } else {
+                    alert("Недостатньо коштів для покупки NFT!");
+                }
+            } else { // Продаж
+                balance += nftPrice;
+                ownsNFT = false;
+                document.getElementById('buySellButton').innerText = 'BUY';
+            }
+            localStorage.setItem('balance', balance);
+            updateCounterDisplay();
+        }
+
+        // Запускаємо динамічне оновлення ціни кожну секунду
+        setInterval(updateNFTPrice, 1000);
+
+        // Ініціалізація інтерфейсу
         window.Telegram.WebApp.ready();
-
-        // Отримуємо ім'я користувача з Telegram Web Apps API
         const user = window.Telegram.WebApp.initDataUnsafe.user;
         if (user) {
             document.getElementById('nickname').innerText = user.first_name || user.username;
         }
-
-        // Ініціалізуємо початкове значення лічильника та меню
         updateCounterDisplay();
-        showClickerMenu();
+        showScreen('clicker');
     </script>
 </body>
 </html>
